# logistics

./: .gitignore  README.md  TODO.md  com.camerondahl.Logistics.devel.json  com.camerondahl.Logistics.json  com.camerondahl.Logistics.json~  logistics.in  meson.build  python3-dependencies.json
.github/workflows/: logistics-dev.yml  main.yml
data/: com.camerondahl.Logistics.appdata.xml.in  com.camerondahl.Logistics.desktop.in  com.camerondahl.Logistics.gschema.xml  logistics.gresource.xml  meson.build
data/icons/: meson.build
data/ui/: container_details_view.bp  container_logs_page.bp  container_row.bp  containers_page.bp  image_dialog.bp  image_row.bp  images_page.bp  preferences.bp  style.css  window.bp
logistics/: container_details_view.py  container_logs_page.py  container_row.py  containers_page.py  image_dialog.py  image_row.py  images_page.py  main.py  preferences.py  window.py
logistics/docker/: client.py
logistics/docker/models/: __init__.py  config.py  container.py  container_config.py  image.py  variable.py
po/: POTFILES  meson.build
src/: docker.py  main.py  meson.build  window.py
